Fix scrollbar being shown all the time on tables

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -163,7 +163,7 @@ tr.disabled {
 
 .table-container {
 	width: 100%;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 @media (min-width: 1400px) {
